--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,22 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Maven
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.properties
+
+# Eclipse/IntelliJ/VSCode
+*.iml
+.idea/
+*.class
+*.log
+.vscode/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+*.tar
